# versioned-hdf5

./: .authors.yml  .buildinfo  .cirun.yml  .doctr-files  .dprint.jsonc  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS.md  CHANGELOG.html  CLAUDE.md  LICENSE  MANIFEST.in  README.md  _versioneer.py  asv.conf.json  authors.html  benchmark.ods  benchmarks_install.py  changelog.html  codecov.yml  conda-forge.yml  conftest.py  demo.ipynb  design.html  design.md  environment-windows.yml  environment.yml  generate_data.py  generate_data_deterministic.py  generate_data_deterministic_no_versions.py  generate_data_no_versions.py  genindex.html  github_deploy_key_deshaw_versioned_hdf5.enc  github_deploy_key_quansight_versioned_hdf5.enc  index.html  install_benchmarks.py  (+29 more)
.asv/results/: benchmarks.json
.ci_support/: linux_.yaml
.github/workflows/: bench.yml  benchmarks.yml  docs.yml  lint.yml  pre-commit.yml  publish_docs.yml  pypi_publish.yml  tests.yml  wheels.yml
.pixi/: config.toml
_docs-1.1/: .doctr-files  authors.html  changelog.html  design.html  installation.html  reference.html  search.html
_docs-1.1/_sources/: changelog.md.txt  performance.rst.txt  quickstart.rst.txt
_docs-design-docs/: .doctr-files  design.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
_docs-design-docs/_sources/: design.md.txt  index.rst.txt
_docs-performance3/: .doctr-files  authors.html  design.html  index.html  objects.inv  performance.html  performance_filesizes.html  quickstart.html  searchindex.js
_docs-performance3/_sources/: reference.rst.txt
_docs-performance3/_static/: alabaster.css
_docs-release/: .doctr-files  authors.html  changelog.html  design.html  genindex.html  index.html  installation.html  performance.html  performance_filesizes.html  performance_io.html  py-modindex.html  quickstart.html  reference.html  search.html  searchindex.js
_docs-release/_sources/: changelog.md.txt  index.rst.txt
_docs-replay/: .doctr-files  changelog.html  design.html  genindex.html  index.html  installation.html  performance_filesizes.html  performance_io.html  reference.html
_sources/: changelog.md.txt  design.md.txt  index.rst.txt  installation.rst.txt  releasing.md.txt
_static/: alabaster.css
analysis/: Performance_tests-File_sizes.ipynb  Performance_tests-IO.ipynb  Performance_tests.ipynb  Test - File sizes (fixed array size).ipynb  Test - Fixed array size.ipynb  Test - IO Performance (fixed array size).ipynb  Test_File_sizes-Chunking.ipynb  Test_File_sizes.ipynb  Test_IO_Performance.ipynb  compression_tests.py  generate_data.py  generate_data_base.py  performance_tests.py  test_large_fraction_changes_sparse.json  test_large_fraction_changes_sparse_no_versions.json  test_large_fraction_changes_sparse_versions.pickle  test_large_fraction_changes_sparse_versions_10.pickle  test_large_fraction_changes_sparse_versions_12.pickle  test_large_fraction_changes_sparse_versions_14.pickle  test_large_fraction_changes_sparse_versions_8.pickle  test_large_fraction_constant_sparse.json  test_large_fraction_constant_sparse_no_versions.json  test_mostly_appends_dense.json  test_mostly_appends_dense_no_versions.json  test_mostly_appends_dense_versions.pickle  test_mostly_appends_sparse.json  test_mostly_appends_sparse_no_versions.json  test_mostly_appends_sparse_versions.pickle  test_small_fraction_changes_sparse.json  test_small_fraction_changes_sparse_no_versions.json  test_small_fraction_changes_sparse_versions.pickle  test_small_fraction_changes_sparse_versions_10.pickle  test_small_fraction_changes_sparse_versions_12.pickle  test_small_fraction_changes_sparse_versions_14.pickle  test_small_fraction_changes_sparse_versions_8.pickle
benchmarks/: common.py  datetime.py  delete_versions.py  general.py  hash.py  hashtable.py  hdf5.py  index.json  info.json  inmemoryarraydataset.py  inmemorydataset.py  many_chunks.py  read_many_slices.py  regressions.json  regressions.xml  resize.py  strings.py  versionedhdf5file.py  wrappers.py
ci/: bundle_hdf5_whl.py  cibw_before_all_macos.sh  cibw_before_all_windows.sh  cp_pyx_to_py.py  editable_install.py  get_hdf5_if_needed.sh  get_hdf5_win.py  get_zlib_windows.sh  npy_include_path.py  smoke_test.py  triage_build.sh
docs/: CHANGELOG.md  Makefile  authors.md  changelog.md  conf.py  design.md  development.md  index.rst  installation.rst  multiversion-index.html  performance.rst  performance_filesizes.rst  performance_io.rst  quickstart.rst  reference.rst  releasing.md  staged_changes.rst  strings.rst  usage.rst
news/: first_release.md
recipe/: meta.yaml
test_data/: generate.py  multiple_nested_data_old_data_version.h5  nested_data_old_data_version.h5  object_dtype_bad_hashtable_chunk_reuse.h5  object_dtype_bad_hashtable_chunk_reuse_multi_dim.h5  object_dtype_bad_hashtable_chunk_reuse_unicode.h5  object_dtype_bad_hashtable_data.h5  object_dtype_bad_hashtable_data2.h5
tests/: conftest.py  test_api.py  test_backend.py  test_hash.py  test_hash_legacy_compat.py  test_hashtable.py  test_npystrings.py  test_replay.py  test_slicetools.py  test_staged_changes.py  test_subchunk_map.py  test_tools.py  test_typing.py  test_versions.py  test_wrappers.py
utils/: __init__.py  debug_libhdf5_so.py
versioned_hdf5/: __init__.py  _commit_hash.hpp  _commit_hash.pxd  _commit_hash.py  _version.py  api.py  backend.py  cytools.pxd  cytools.py  cytools.pyx  data_dict.py  h5py_compat.py  hash.pxd  hash.pyx  hashtable.py  hdf5util.pyx  hyperspace.pxd  hyperspace.py  hyperspace.pyx  meson.build  replay.py  sha256.c  sha256.h  slicetools.py  slicetools.pyx  staged_changes.py  staged_changes.pyx  subchunk_map.pxd  subchunk_map.py  subchunk_map.pyx  tools.py  typing_.py  utils.py  versions.py  wrappers.py
versioned_hdf5/tests/: conftest.py  helpers.py  test_api.py  test_backend.py  test_cytools.py  test_hashtable.py  test_hyperspace.py  test_replay.py  test_slicetools.py  test_staged_changes.py  test_subchunk_map.py  test_tools.py  test_typing.py  test_versions.py  test_wrappers.py
(+41 files in other folders)
