[build-system]
requires = [
    "meson-python >=0.15.0",
    "setuptools_scm >=8.1",
    "Cython >= 3.0.10",
    "numpy >= 1.24.4",
]
build-backend = "mesonpy"

[project]
name = "versioned-hdf5"
dynamic = ["version"]
authors = [
  { name="Quansight" },
]
description = "Versioned HDF5 provides a versioned abstraction on top of h5py"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.4",
    # Note: Linux binary wheels depend on h5py>=3.15.0.
    "h5py>=3.8.0",
    "ndindex>=1.5.1",
]
urls = { Homepage = "https://github.com/deshaw/versioned-hdf5" }
license = { file = 'LICENSE' }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8 naming
    "N",
    # pydocstyle
    # "D",  # TODO review and fix errors
    # annotations
    # "ANN",  # TODO review and fix errors
    # debugger
    "T10",
    # flake8-pytest
    "PT",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-fixme
    # "FIX",  # Typically this should be uncommented in one-off reviews
    # flake8-eradicate
    "ERA",
    # pandas-vet
    "PD",
    # numpy-specific rules
    "NPY",
]
ignore = [
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "D213", # Multiline summary second line
    "ANN204", # Missing return type annotation for special method
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line before after class docstring
    "D413", # 1 black line after parameters
    "N806", # Variable name should be lowercase; uppercase indicates constants
    "SIM108", # Simplify if/else to one line; not always clearer
    "SIM114", # Combine `if` branches using logical `or` operator; not always clearer
    "SIM300", # Yoda condition `a < var`; clearer in `a < var and var < b`
    "RET505", # Unnecessary elif after return statement; not always clearer
    "UP032", # Use f-string instead of `format` call; not always clearer

    # FIXME these need to be fixed in the code
    "PT011",  # `pytest.raises(ValueError)` is too broad, set the `match` parameter
    "NPY002",  # Replace np.random legacy functions with np.random.Generator
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "N802",  # Function name should be lowercase
]
"analysis/*.ipynb" = [
    "ERA001",  # Commented out code
]
"analysis/generate_*.py" = [
    "PT028",  # Test function parameter has default argument
]
"benchmarks/**.py" = [
    "ARG002",  # Unused argument - needed by asv for parameterization
]

[tool.isort]
profile = "black"

[tool.pytest_env]
ENABLE_CHUNK_REUSE_VALIDATION = 1

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=ci/ --ignore=analysis/ --import-mode=importlib"
doctest_optionflags = "NORMALIZE_WHITESPACE"
strict_xfail = true
markers = [
    "setup_args : kwargs for setup fixture.",
    "slow: slow tests",
    "api: api smoke tests",
]
filterwarnings = ["error"]  # Fail on all unhandled warnings

[tool.mypy]
allow_incomplete_defs = true  # FIXME
allow_untyped_decorators = true  # FIXME
allow_untyped_defs = true  # FIXME
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["*.tests.*"]
allow_untyped_defs = true

[tool.cibuildwheel]
build-verbosity = 1
build-frontend = { name = "pip", args = ["--only-binary", "numpy"] }
# This must be kept in sync with h5py/pyproject.toml
# h5py <=3.14.0 used manylinux2014, which shipped a different version of libhdf5.
# As such,
#   versioned-hdf5 built from sources (any platform) requires h5py >=3.8.0
#   versioned-hdf5 conda-forge binary packages (any platform) require h5py >=3.8.0
#   versioned-hdf5 MacOSX wheels require h5py >=3.8.0
#   versioned-hdf5==2.1.0 Linux wheels require h5py wheels >=3.8.0,<3.15.0
#   versioned-hdf5>=2.2.0 Linux wheels require h5py wheels >=3.15.0
manylinux-x86_64-image = "ghcr.io/h5py/manylinux_2_28_x86_64-hdf5"
manylinux-aarch64-image = "ghcr.io/h5py/manylinux_2_28_aarch64-hdf5"

[tool.cibuildwheel.linux]
environment-pass = ["GITHUB_ACTIONS"]

[tool.cibuildwheel.linux.environment]
CFLAGS = "-g1"

[tool.cibuildwheel.macos]
# https://cibuildwheel.pypa.io/en/stable/faq/#macos-passing-dyld_library_path-to-delocate
repair-wheel-command = """\
DYLD_FALLBACK_LIBRARY_PATH=$HDF5_DIR/lib \
delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} \
"""

[tool.cibuildwheel.macos.environment]
H5PY_ROS3 = "0"
H5PY_DIRECT_VFD = "0"

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
h5py = "*"
ndindex = "*"

[tool.pixi.feature.build.dependencies]
# Needed for --no-build-isolation
cython = "*"
meson-python = "*"
setuptools-scm = "*"
pip = "*"
wheel = "*"
python-build = "*"
twine = "*"
zlib = "*"

[tool.pixi.feature.build.target.linux.dependencies]
gcc = "*"
patchelf = "*"

[tool.pixi.feature.build.target.osx.dependencies]
clang = "*"
patchelf = "*"

[tool.pixi.feature.build.target.win.dependencies]
clang = "*"
llvm-tools = "*"
pkg-config = "*"  # Needed to find hdf5

[tool.pixi.feature.build.target.win.activation.env]
CC = "clang"
LD = "llvm-ar"

[tool.pixi.feature.build.tasks]
# Perform a regular build and install of versioned-hdf5 in the current environment
install = "python -m pip install . -v --no-build-isolation --no-dependencies"
uninstall = "python -m pip uninstall -y versioned-hdf5"
# Perform editable install, but do nothing if package was already installed by
# either 'install' or 'editable-install'. Add --force to force re-installation.
# This task is a dependency of all tasks that need versioned-hdf5 to be installed.
editable-install = "python ci/editable_install.py"
sdist = "python -m build --sdist --no-isolation"
# Build a wheel for the current platform and python only.
# For debugging only. Do not use for release; use cibuildwheel instead.
wheel = "python -m build --wheel --no-isolation"
twine-check = "twine check dist/*"
smoke = { cmd = "python ci/smoke_test.py", depends-on = ["editable-install"] }

# Absolute minimum versions of build and runtime dependencies.
# Compilation against an old stack of dependencies is very fiddly:
# - No Linux ARM nor MacOS ARM binaries available for hdf5
# - On MacOS Intel, h5py==3.8.0 fails to compile due to import issues
# - On Windows, meson fails to find libhdf5 1.10, and crashes with libhdf5 1.12.

[tool.pixi.feature.mindeps.dependencies]
meson = "=1.2.0"
meson-python = "=0.15.0"
setuptools-scm = "=8.1"
cython = "=3.0.10"
numpy = "=1.24.4"
ndindex = "=1.5.1"

[tool.pixi.feature.mindeps.target.linux-64.dependencies]  # Intel
# Note: apt on Ubuntu 24.04 (ubuntu-latest github runner) installs
# hdf5=1.10.10, which however is not available on conda
hdf5 = "=1.10.6"
gcc = "=10"

# h5py=3.8.0 in conda-forge requires hdf5 >=1.12.2,<1.14.1;
# build it from sources instead.
[tool.pixi.feature.mindeps.target.linux-64.pypi-dependencies]
h5py = "==3.8.0"

[tool.pixi.feature.mindeps.pypi-options]
no-binary = ["h5py"]

[tool.pixi.feature.mindeps.target.linux-aarch64.dependencies]
# No binaries available for very old versions on Linux ARM
hdf5 = "=1.12.2"
h5py = "=3.8.0"
gcc = "=10"

[tool.pixi.feature.mindeps.target.osx.dependencies]  # Both ARM and Intel
# No binaries available for very old versions on MacOS ARM
# MacOS Intel fails to compile h5py 3.8.0 from sources
hdf5 = "=1.12.2"
h5py = "=3.8.0"
clang = "=14"

[tool.pixi.feature.mindeps.target.win-64.dependencies]  # Intel
# Meson fails to detect hdf5 1.10
# hdf5 1.12 shows double-linking issues at runtime
hdf5 = "=1.14.0"
h5py = "=3.9.0"
clang = "=14"
llvm-tools = "=14"

[tool.pixi.feature.hdf5-112]
# hdf5 1.12.2 is the minimum version supported by h5py binaries in conda-forge.
# On Windows it shows double-linking issues at runtime
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.feature.hdf5-112.dependencies]
numpy = "=1.24.4"  # Old versions of h5py trigger DeprecationWarning in newer NumPy
h5py = "=3.8.0"
hdf5 = "=1.12.2"

[tool.pixi.feature.np126.dependencies]
numpy = "=1.26"
[tool.pixi.feature.np200.dependencies]
numpy = "=2.0"

[tool.pixi.feature.py310.dependencies]
python = "=3.10"
[tool.pixi.feature.py311.dependencies]
python = "=3.11"
[tool.pixi.feature.py312.dependencies]
python = "=3.12"
[tool.pixi.feature.py313.dependencies]
python = "=3.13"
[tool.pixi.feature.py314.dependencies]
python = "=3.14"

[tool.pixi.feature.h5py-dev.dependencies]
numpy = "*"
hdf5 = "*"
ndindex = "*"

[tool.pixi.feature.h5py-dev.pypi-dependencies]
h5py = { git = "https://github.com/h5py/h5py.git" }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-env = "*"
hypothesis = "*"
packaging = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest", depends-on = ["editable-install"] }

[tool.pixi.feature.filters.dependencies]
hdf5plugin = "*"

[tool.pixi.feature.ipython.dependencies]
ipython = "*"

[tool.pixi.feature.ipython.tasks]
ipython = { cmd = "ipython", depends-on = ["editable-install"] }

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
install-git-hooks = "pre-commit install"

[tool.pixi.feature.bench.dependencies]
asv = "*"

[tool.pixi.feature.bench.tasks]
asv-machine = "asv machine --yes"
asv-run = { cmd = "asv run --python=same --quick --set-commit-hash $(git rev-parse HEAD)", depends-on = ["editable-install"] }

[tool.pixi.feature.docs.dependencies]
graphviz = "*"
myst-parser = "*"
# FIXME https://github.com/sphinx-contrib/multiversion/issues/201
# sphinx-multiversion 0.2.4 is broken with Sphinx 9
sphinx = "=8"
sphinx-multiversion = "*"

[tool.pixi.feature.docs.tasks]
docs = { cmd = "sphinx-build -M html . _build -W", cwd = "docs", depends-on = ["editable-install"] }
docs-multiversion-build = { cmd = "sphinx-multiversion . _build-multiversion/html", cwd = "docs", depends-on = ["editable-install"] }
# sphinx-multiversion only builds docs for every tag; this redirects users who visit
# ./index.html -> ./master/index.html, which is the development branch docs.
docs-multiversion-redirect = "cp docs/multiversion-index.html docs/_build-multiversion/html/index.html"
docs-multiversion = { depends-on = ["docs-multiversion-build", "docs-multiversion-redirect"] }

[tool.pixi.environments]
default = { features = ["py314", "ipython", "build", "test", "filters", "bench"] }
bench = { features = ["py314", "build", "bench"] }
docs = { features = ["py314", "build", "docs"] }
lint = { features = ["lint"], no-default-feature = true }
mindeps = { features = ["py310", "mindeps", "build", "test", "bench"], no-default-feature = true }
hdf5-112 = { features = ["py310", "hdf5-112", "build", "test", "filters"] }
np126 = { features = ["py310", "np126", "build", "test", "filters"] }
np200 = { features = ["py310", "np200", "build", "test", "filters"] }
py310 = { features = ["py310", "build", "test", "filters"] }
py311 = { features = ["py311", "build", "test", "filters"] }
py312 = { features = ["py312", "build", "test", "filters"] }
py313 = { features = ["py313", "build", "test", "filters"] }
py314 = { features = ["py314", "build", "test", "filters"] }
h5py-dev = { features = ["py314", "h5py-dev", "build", "test"], no-default-feature = true }
